# Mink-DDPM

./: .gitignore  README.md  baseline_evaluation_results.yaml  config.yaml  ddpm_params.yaml  pyproject.toml  unet_mink_params.yaml  unet_params.yaml
data/: README.md  dataset.py
data/preprocessing/: apply_mixup_augmentation.py  compute_gamma_targets.py  compute_persistence_thresholds.py  consolidate_and_split_shuf.py  download_dem.py  generate_metadata.py  preprocess_data.py  run_pipeline.sh  thresholds.txt
eval/: eval_ddpm.py  eval_emulator_baselines.py  io_lib_sr.py  metrics.py  plotting_lib_sr.py
eval/SR/: eval_bicubic.py  eval_ddpm.py  eval_unet.py
eval/gamma/: baselines_emu.py  eval_emu.py  metrics_lib_emu.py  plotting_lib_emu.py
eval/sr/: plotting_lib_sr.py
models/emulators/: gamma_predictors.py
plotting/: plot_emulators_comparison.py  plot_emulators_tests.py  plot_spectra_sr.py  plot_sr_comparison.py
scripts/: emulator_baselines.sh  eval_ddpm.sh  run_preprocessing_pipeline.sh  train_ddpm.sh  train_gamma.sh  train_unet.sh  train_unet_mink.sh
scripts/data/: download_dem.sh  run_preprocessing_pipeline.sh
scripts/gamma/: emulator_baselines.sh  test_emu.sh  (+6 more)
src/: analytical_gamma.py  calibrate_tau.py  convert_wind_gan_discriminator_tf_to_torch.py  gamma_predictors.py  loss.py  train_ddpm.py  train_ddpm_geom.py  train_ddpm_spec.py  train_gamma.py  train_unet.py  train_unet_ana.py  utils.py
test/: test_empirical_lipschitz.py  test_multi_gaussian.py
tests/: test_emulators.py
training_params/: Baseline_emulator_hp.yaml  Constrained_emulator_hp.yaml
(+119 files in other folders)
